# statistical_self_consistency

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
data/wvs_wave_7/: question_dict_v9_manual.json  wvs_attribute_dict.json  wvs_questions_matching_complete.json
secrets/: secret_template.yaml
src/config/: constants.py  experiment_config.py  goqa_config.py  minimal_experiment_config.py  model_config.py  prior_computation_config.py
src/data_loader_acs/: README.md  acs_attributes.json  acs_columns.py  compute_prior.py  data_loader.py  data_to_parquet.py  value_map.py
src/data_loader_global_opinion_qa/: data_loader.py  questions_by_country.json  questions_identifiers.json
src/data_loader_wvs/: create_attribute_dict.py  wvs_decomposition_split.py  wvs_node_values.py  wvs_sav_loader.py
src/design_elements/: color_palette.py  set_of_markers.py
src/file_logging/: read_and_write_csv.py  read_and_write_json.py
src/language_models/: batch_prompting_decomposed.py  batch_prompting_direct.py  prior_estimation.py  prompt_local_llm.py  prompt_open_router.py  prompt_unified.py
src/prompt_templates/: ACS_commute_distribution_no_filters_v1.txt  ACS_commute_distribution_v1.txt  ACS_commute_time_micro_macro_v1.txt  ACS_commute_time_micro_macro_working_population.txt  ACS_commute_time_no_filters_v1.txt  ACS_commute_time_no_filters_working_population.txt  ACS_income_distribution_no_filters_v1.txt  ACS_income_distribution_v1.txt  ACS_income_few_bin_implicit_micro_macro.txt  ACS_income_few_bins_no_filters_v1.txt  ACS_income_few_bins_v1.txt  ACS_income_no_filters_v3.txt  ACS_income_no_filters_v4_confidence.txt  ACS_income_thresholded_explicit_micro_macro.txt  ACS_income_thresholded_implicit_micro_macro_v1.txt  ACS_income_thresholded_implicit_micro_macro_v2.txt  ACS_income_two_bins_no_filters_v1.txt  ACS_income_two_bins_v1.txt  ACS_income_v1.txt  (+37 more)
(+213 files in other folders)
